src/sass/_card.scss
.card {
    display: flex;
    justify-content: center;
    align-items: center;
    color: white;

    width: 20rem;
    height: 20rem;
    position: relative;
    overflow: hidden;
    border-radius: 20px;
    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);


    transition: all 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
    cursor: pointer;


    &__image {

        height: 110%;
        position: absolute;
        top: 0;
        opacity: 0;
        transition: 0.8s cubic-bezier(0.2, 0.8, 0.2, 1);
        z-index: -5;
    }

    &__image:before {
        content: '';
        color: red;
        position: absolute;
        z-index: -3;
    }

    &__text {
        font-size: 3rem;
        z-index: 800;
    }


    &:hover {
        transform: scale(1.2, 1.2);
        box-shadow: 0 20px 50px rgba(0, 0, 0, 0.4);
        opacity: 1;
        color: transparent;
    }

    &:active {
        transform: translateY(10px);
    }

    &:hover>img {
        opacity: 1;
        transform: translateY(-2rem)
    }


    &__image:hover {}
}

// @media (max-width: 640px) {
//     .CardGroup h2 {
//         font-size: 30px;
//     }
// }

// @media (max-width: 1060px) {
//     .CardGroup {
//         grid-template-columns: repeat(2, 1fr);
//     }
// }

// @media (max-width: 720px) {
//     .CardGroup {
//         grid-template-columns: repeat(1, 1fr);
//     }
// }


.card-3 img {
    padding: 5rem 5rem 4rem 4rem;
}

.card-1 {

    z-index: 1000;
}

